fix: registry sync path removal bug (#1282)
* fix: registry sync path removal bug

* test: adapt test cases