@@ -38,8 +38,7 @@ import de.fraunhofer.iosb.ilt.faaast.service.util.LambdaExceptionHelper;
 import de.fraunhofer.iosb.ilt.faaast.service.util.ReferenceHelper;
 import de.fraunhofer.iosb.ilt.faaast.service.util.SslHelper;
 import java.io.IOException;
-import java.net.URISyntaxException;
-import java.net.URL;
+import java.net.URI;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
 import java.net.http.HttpResponse.BodyHandlers;
@@ -84,8 +83,8 @@ public class RegistrySynchronization {
     private static final String MSG_SUBMODEL_NOT_FOUND = "submodel could not be found in persistence";
     private static final String MSG_BAD_RETURN_CODE = "bad return code %s";
 
-    private static final String AAS_URL_PATH = "/shell-descriptors";
-    private static final String SUBMODEL_URL_PATH = "/submodel-descriptors";
+    private static final String AAS_URL_PATH = "shell-descriptors";
+    private static final String SUBMODEL_URL_PATH = "submodel-descriptors";
 
     private final CoreConfig coreConfig;
     private final Persistence<?> persistence;
@@ -482,7 +481,7 @@ public class RegistrySynchronization {
                     }
 
                 }
-                catch (URISyntaxException | IOException | InterruptedException | KeyManagementException | NoSuchAlgorithmException e) {
+                catch (IOException | InterruptedException | KeyManagementException | NoSuchAlgorithmException e) {
                     LOGGER.warn(String.format(
                             errorMsg,
                             id,
@@ -499,13 +498,14 @@ public class RegistrySynchronization {
 
 
     private HttpResponse<String> execute(String method, String baseUrl, String path, Object payload)
-            throws URISyntaxException, IOException, InterruptedException, KeyManagementException, NoSuchAlgorithmException {
+            throws IOException, InterruptedException, KeyManagementException, NoSuchAlgorithmException {
         Ensure.requireNonNull(method, "method must be non-null");
         Ensure.requireNonNull(baseUrl, "baseUrl must be non-null");
         Ensure.requireNonNull(path, "path must be non-null");
         Ensure.requireNonNull(payload, "payload must be non-null");
+        String safeBaseUrl = baseUrl.endsWith("/") ? baseUrl : baseUrl.concat("/");
         HttpRequest.Builder builder = HttpRequest.newBuilder()
-                .uri(new URL(new URL(baseUrl), path).toURI())
+                .uri(URI.create(safeBaseUrl).resolve(path))
                 .header("Content-Type", "application/json");
         HttpRequest request = builder.method(method, HttpRequest.BodyPublishers.ofString(mapper.writeValueAsString(payload))).build();
         return SslHelper.newClientAcceptingAllCertificates().send(request, BodyHandlers.ofString());
